--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "gulp-useref": "^3.1.6",
     "main-bower-files": "^2.5.0",
     "run-sequence": "^1.2.2",
-    "wiredep": "^4.0.0"
+    "wiredep": "^4.0.0",
+    "ejs": "^2.6.1"
   },
   "eslintConfig": {
     "env": {
@@ -42,5 +43,8 @@
         "single"
       ]
     }
+  },
+  "scripts": {
+    "generateHTML": "node app/generateSpeakers.js"
   }
 }
