--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-register": "^6.5.2",
     "browser-sync": "^2.26.3",
     "del": "^2.2.0",
+    "ejs": "^2.6.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.0.1",
     "gulp-babel": "^6.1.1",
@@ -28,8 +29,7 @@
     "gulp-useref": "^3.1.6",
     "main-bower-files": "^2.5.0",
     "run-sequence": "^1.2.2",
-    "wiredep": "^4.0.0",
-    "ejs": "^2.6.1"
+    "wiredep": "^4.0.0"
   },
   "eslintConfig": {
     "env": {
